<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#424242"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.uob.msproject.MainActivity$PlaceholderFragment" >

    <Button
        android:id="@+id/takePhoto_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:onClick="takePhoto"
        android:text="@string/takePhoto_btn" />

    <Button
        android:id="@+id/manage_btn"
        android:layout_width="wrap_content"
        android:onClick="manageImages"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/takePhoto_btn"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/takePhoto_btn"
        android:text="@string/manage_btn" />

    <Button
        android:id="@+id/settings_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/manage_btn"
        android:onClick="showSettings"
        android:text="@string/settings_btn" />

    <Button
        android:id="@+id/quit_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/settings_btn"
        android:onClick="quit"
        android:text="@string/quit_btn" />

</RelativeLayout>