<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#424242"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.uob.msproject.PostPhotoAcquisitionActivity" >

    <ImageView
        android:id="@+id/imgPreview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/retake_btn"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="3dp"
        android:adjustViewBounds="true"
        android:background="#000000"
        android:contentDescription="@string/imgPreview" />

    <Button
        android:id="@+id/process_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/discard_btn"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/discard_btn"
        android:layout_marginBottom="3dp"
        android:text="@string/process" />

    <Button
        android:id="@+id/discard_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/process_btn"
        android:layout_alignLeft="@+id/retake_btn"
        android:layout_alignRight="@+id/retake_btn"
        android:layout_marginBottom="3dp"
        android:text="@string/discard" />

    <Button
        android:id="@+id/retake_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/discard_btn"
        android:layout_alignLeft="@+id/imgPreview"
        android:layout_alignRight="@+id/imgPreview"
        android:layout_marginBottom="3dp"
        android:text="@string/retake" />

</RelativeLayout>