<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#424242"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <TextView
        android:id="@+id/lower_threshold_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="7dp"
        android:text="@string/lower_threshold"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/save_btn"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/save_btn" />

    <SeekBar
        android:id="@+id/lower_threshold_seekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/lower_threshold_textView"
        android:layout_below="@+id/lower_threshold_textView" />

    <TextView
        android:id="@+id/lt_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lower_threshold_seekBar"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="14dp"
        android:text="Small Text"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/upper_threshold_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/lower_threshold_seekBar"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/lt_textView"
        android:layout_marginBottom="7dp"
        android:text="@string/upper_threshold"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#FFFFFF" />

    <SeekBar
        android:id="@+id/upper_threshold_seekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/upper_threshold_textView"
        android:layout_below="@+id/upper_threshold_textView" />

    <TextView
        android:id="@+id/ut_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/lt_textView"
        android:layout_below="@+id/upper_threshold_seekBar"
        android:text="Small Text"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/back_btn"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:text="@string/back_btn" />

    <Button
        android:id="@+id/btn_reloadPatterns"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/upper_threshold_seekBar"
        android:layout_alignRight="@+id/upper_threshold_seekBar"
        android:layout_below="@+id/ut_textView"
        android:text="@string/btn_reloadTrainingPatterns" />

    <Button
        android:id="@+id/loadAllPatterns_btn"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btn_reloadPatterns"
        android:layout_alignRight="@+id/btn_reloadPatterns"
        android:layout_below="@+id/btn_reloadPatterns"
        android:text="@string/loadAllPatterns_btn" />

    <Button
        android:id="@+id/reset_btn"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/loadAllPatterns_btn"
        android:layout_alignRight="@+id/loadAllPatterns_btn"
        android:layout_below="@+id/loadAllPatterns_btn"
        android:text="@string/reset_btn" />

</RelativeLayout>