<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#424242"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="${relativePackage}.${activityClass}" >

    <Button
        android:id="@+id/back_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/main_listView"
        android:text="@string/back_btn" />

    <ListView
        android:id="@+id/main_listView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_above="@+id/process_btn"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/options_spinner"
        android:dividerHeight="0.8dp" />

    <Button
        android:id="@+id/discard_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/back_btn"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/back_btn"
        android:text="@string/discard" />

    <Button
        android:id="@+id/process_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/discard_btn"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/discard_btn"
        android:text="@string/process" />

    <Spinner
        android:id="@+id/options_spinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true" />

</RelativeLayout>